# my_ros2_ws

install/: local_setup.sh  setup.sh
install/MYROBOT_description/share/MYROBOT_description/: package.ps1  package.sh
install/MYROBOT_gazebo/share/MYROBOT_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/control_pkg/share/control_pkg/: package.bash  package.sh  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/provant_quadrotor/share/provant_quadrotor/: package.bash  package.zsh
install/provant_simulator_gz_plugins/share/provant_simulator_gz_plugins/: package.bash  package.zsh
install/provant_simulator_interfaces/share/provant_simulator_interfaces/: package.bash
install/provant_simulator_launch/share/provant_simulator_launch/: package.xml
install/provant_simulator_linters/share/provant_simulator_linters/: package.ps1  package.sh  package.zsh
install/turtlebot3/share/turtlebot3/: package.sh
install/turtlebot3_bringup/share/turtlebot3_bringup/: package.sh
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: package.sh
install/turtlebot3_description/share/turtlebot3_description/: package.sh
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.sh  package.sh
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.sh  package.sh
install/turtlebot3_msgs/share/turtlebot3_msgs/: package.sh
log/: latest_build  latest_list
src/: provant_simulator
src/MYROBOT_description/: CMakeLists.txt  package.xml
src/MYROBOT_gazebo/: CMakeLists.txt  package.xml
src/MYROBOT_gazebo/launch/: MYROBOT.launch.py
src/control_pkg/: package.xml  setup.cfg  setup.py
src/control_pkg/scripts/: camila.py  fabricio.py  glaucia.py  joao_victor.py  leonardo.py  lorena.py  lucas.py  maria_clara.py  nathan.py  thales.py  wellington.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/provant_simulator_linters/share/provant_simulator_linters/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml
src/log/: latest_build
src/plugin_library_bin/: plugin.cpp  plugin.hpp
src/plugin_parsing_library/: example_plugin.yml  main.cpp  parameter.cpp  parameter.hpp  plugin_parameters.cpp  plugin_parameters.hpp  restriction.hpp
src/yamlfiles/: shop.yaml  student.yaml
(+34 files in other folders)
